argocd/qa/pre/NetworkPolicy_argocd-notifications-controller-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: argocd
  name: argocd-notifications-controller-network-policy
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 9001
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-notifications-controller
  policyTypes:
    - Ingress
